<resources>
    <string name="app_name">London Runner</string>
    <string name="str1"><b>What are you looking for?</b></string>
    <string name="str2">Outdoor tracks</string>
    <string name="str3">Indoor tracks</string>
    <string name="str_tracks">Tracks</string>
    <string name="str4">Parks</string>
    <string name="str5">Parkrun</string>
    <string name="str6">Athletics clubs</string>
    <string name="image_cont_desc">Track image</string>
    <string name="local_club">Local club:</string>
    <string name="club_desc">Club description</string>
    <string name="links">Links</string>
    <string name="item_heading_times_prices">Prices &amp; Opening times</string>
    <string name="parkrun_title">Parkrun</string>
    <string name="parkrun_text1">What is Parkrun?</string>
    <string name="parkrun_text2">View results</string>
    <string name="parkrun_text3">Register</string>
    <string name="parkrun_register_url">https://www.parkrun.org.uk/register/form/</string>
    <string name="parkrun_text4_1">Parkrun organise free, weekly, 5km timed runs around the world.
        They are open to everyone, free, and are safe and easy to take part in.
</string>
    <string name="parkrun_text4_2"><i>"These events take place in pleasant parkland surroundings and we encourage people of every ability to take part; from those taking their first steps in running to Olympians; from juniors to those with more experience; we welcome you all."</i></string>
    <string name="parkrun_image1_url">https://imgur.com/WNpfCsT</string>
    <string name="parkrun_image2_url">https://imgur.com/jP6Iesm</string>
    <string name="parkrun_image_contdesc">https://imgur.com/jP6Iesm</string>
    <string name="parkrun_results_hint"> Type an athlete ID number\n(Can be found in your barcode and/or registration email)</string>
    <string name="club_link">Club website</string>
    <string name="club_roster">Power of 10 stats</string>
    <string name="actionbar_icon">AB Icon</string>
    <string name="str_dist_default">"X miles away"</string>
    <string name="app_title"><b>London Runner</b></string>
    <string name="info_distance">The displayed distance is a straight line from your location to
        the tracks locations. Not the driving or walking distance</string>
    <string name="type1_1_name">Mile End Stadium</string>
    <string name="type1_1_address">E3 4HL</string>
    <string name="type1_1_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Mile+End+Park+Leisure+Centre+and+Stadium</string>
    <string name="type1_1_price1">Adult £2.80, Junior £1.40.\n Monthly and quarterly track passes available.</string>
    <string name="type1_1_price2">Not free</string>
    <string name="type1_1_desc">400m all-weather track with 8 lanes. Resurfaced in 2011.</string>
    <string name="type1_1_times">Open Mon-Fri 6am-8pm\n Sat-Sun 9am-5pm</string>
    <string name="type1_1_picURL">https://imgur.com/YjvEaf5</string>
    <string name="type1_2_name">Regent\'s Park Track</string>
    <string name="type1_2_address">NW1</string>
    <string name="type1_2_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Regent\'s+Park+Running+Track</string>
    <string name="type1_2_price1">Free</string>
    <string name="type1_2_price2">Free</string>
    <string name="type1_2_desc">6-lane 386.8m cinder track with tight bends. Open at all times.</string>
    <string name="type1_2_times">Open Mon-Fri 9am-10pm\n Sat 9am-6pm\n Sun 9am-9:30pm.</string>
    <string name="type1_2_picURL">https://imgur.com/RZRjgbp</string>
    <string name="type1_3_name">Battersea Park Millennium Arena</string>
    <string name="type1_3_address">SW11 4NJ</string>
    <string name="type1_3_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Millennium+Arena</string>
    <string name="type1_3_price1">Adult £2.70.\n Track passes or memberships available. </string>
    <string name="type1_3_price2">Not free</string>
    <string name="type1_3_desc">400m 8-lane synthetic track.</string>
    <string name="type1_3_times">Open Mon-Fri 9am-10pm\n Sat 9am-6pm/n Sun 9am-9:30pm.</string>
    <string name="type1_3_picURL">https://imgur.com/iOPjdrP</string>
    <string name="type1_4_name">Parliament Hill Fields Athletics Track</string>
    <string name="type1_4_address">NW5 1QR </string>
    <string name="type1_4_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Parliament+Hill+Fields+Athletics+Track</string>
    <string name="type1_4_price1">Track passes or memberships available.</string>
    <string name="type1_4_price2">Not free</string>
    <string name="type1_4_desc">400m 8-lane synthetic track, floodlit. There is also a 90m grass track at Hampstead Heath Extension during summer months.</string>
    <string name="type1_4_times">Open Mon–Tue&amp;Thu 7:30am–4pm &amp; 6pm–close\n Wed 7:30am–9am &amp; 1–5pm &amp; 6pm–close\n Fri–Sat 7:30am–close\n Sun 7:30am–1pm &amp; 2:30–4pm.></string>
    <string name="type1_4_picURL">https://imgur.com/CmcttH0</string>
    <string name="type1_5_name">Finsbury Park Athletics Track</string>
    <string name="type1_5_address">N4 2NQ</string>
    <string name="type1_5_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Finsbury+Park+Race+Track</string>
    <string name="type1_5_price1">Track passes or memberships available.</string>
    <string name="type1_5_price2">Not free</string>
    <string name="type1_5_desc">400m 6-lane synthetic track.</string>
    <string name="type1_5_times">Mon, Wed, Fri, Sat, Sun 10am-4pm\n Tue &amp; Thu 4pm-9.30pm</string>
    <string name="type1_5_picURL">https://imgur.com/QmPe9j2</string>
    <string name="type1_6_name">Paddington Recreation Ground</string>
    <string name="type1_6_address">W9 1PD</string>
    <string name="type1_6_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=/Paddington+Recreation+Ground+Outdoor+Gym+-+TGOGC</string>
    <string name="type1_6_price1">Adult £1.00, Junior £0.55</string>
    <string name="type1_6_price2">Not free</string>
    <string name="type1_6_desc">6-lane 400m synthetic track, floodlit.</string>
    <string name="type1_6_times">Open Mon-Sun 7am-9:30pm.</string>
    <string name="type1_6_picURL">https://imgur.com/cyJFoJs</string>
    <string name="type1_7_name">Victoria Park Track</string>
    <string name="type1_7_address">E3 5TB</string>
    <string name="type1_7_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=51.5388035,-0.0336228</string>
    <string name="type1_7_price1">Free</string>
    <string name="type1_7_price2">Free</string>
    <string name="type1_7_desc"> 400m cinder track.</string>
    <string name="type1_7_times">Open during park open hours.</string>
    <string name="type1_7_picURL">https://imgur.com/tFtDEV1</string>
    <string name="type1_8_name">White Hart Lane Community Sports Centre</string>
    <string name="type1_8_address">N22 5QW</string>
    <string name="type1_8_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=New+River+Sport,+Tennis+%26+Fitness</string>
    <string name="type1_8_price1">Casual use pay.</string>
    <string name="type1_8_price2">Not free</string>
    <string name="type1_8_desc">400m 8-lane synthetic track.</string>
    <string name="type1_8_times">Open Mon-Fri 9am-10pm\n Sat 9am-6pm\n Sun 9am-9:30pm.</string>
    <string name="type1_8_picURL">https://imgur.com/bbZC01D</string>
    <string name="type1_9_name">Lee Valley Athletics Centre</string>
    <string name="type1_9_address">N9 0AS</string>
    <string name="type1_9_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Lee+Valley+Athletics+Centre</string>
    <string name="type1_9_price1">Adult £4.40.\n Concession groups discount.\n Monthly passes available</string>
    <string name="type1_9_price2">Not free</string>
    <string name="type1_9_desc">8-lane 400m synthetic outdoor track. Plus a 600m bark trail and 200m indoor track with 130 sprint straight. </string>
    <string name="type1_9_times">Open Mon-Fri 8am-10pm\n Sat-Sun 8am-5pm.</string>
    <string name="type1_9_picURL">https://imgur.com/UL6Mh3u</string>
    <string name="type2_9_name">Lee Valley Athletics Centre</string>
    <string name="type2_9_address">N9 0AS</string>
    <string name="type2_9_price1">Adult £4.40.\n Concession groups discount.\n Monthly passes available</string>
    <string name="type2_9_price2">Not free</string>
    <string name="type2_9_desc">8-lane 400m synthetic outdoor track. Plus a 600m bark trail and 200m indoor track with 130 sprint straight. </string>
    <string name="type2_9_times">Open Mon-Fri 8am-10pm\n Sat-Sun 8am-5pm.</string>
    <string name="type2_9_picURL">https://imgur.com/0xdtA5H</string>
    <string name="type1_10_name">Queen Elizabeth Stadium</string>
    <string name="type1_10_address">EN1 3PL</string>
    <string name="type1_10_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Enfield+and+Haringey+Athletic+Club</string>
    <string name="type1_10_price1">Unknown</string>
    <string name="type1_10_price2">Unknown</string>
    <string name="type1_10_desc">400m 6-lane synthetic track.</string>
    <string name="type1_10_times">Unknown</string>
    <string name="type1_10_picURL">https://imgur.com/C5dCnSX</string>
    <string name="type1_11_name">Waltham Forest Pool and Track</string>
    <string name="type1_11_address">E17 5AA</string>
    <string name="type1_11_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Waltham+Forest+Feel+Good+Centre</string>
    <string name="type1_11_price1">Casual use and membership available.</string>
    <string name="type1_11_price2">Not free</string>
    <string name="type1_11_desc">8-lane 400m synthetic outdoor track.</string>
    <string name="type1_11_times">Open Mon-Fri 8am-9pm\n Sat-Sun 8am-2pm.</string>
    <string name="type1_11_picURL">https://imgur.com/YKoyxVt</string>
    <string name="type1_12_name">Ashton Playing Fields</string>
    <string name="type1_12_address">IG8 8AA</string>
    <string name="type1_12_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Ashton+Playing+Fields</string>
    <string name="type1_12_price1">Casual use and membership available.</string>
    <string name="type1_12_price2">Not free</string>
    <string name="type1_12_desc">400m all-weather track with 8 lanes.</string>
    <string name="type1_12_times">Open Mon-Thu 7am-10pm\n Fri 7am-7pm\n Sat-Sun 9am-5pm.</string>
    <string name="type1_12_picURL">https://imgur.com/PWT5Pwc</string>
    <string name="type1_13_name">Newham Leisure Centre</string>
    <string name="type1_13_address">E13 8SD</string>
    <string name="type1_13_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Newham+Leisure+Centre</string>
    <string name="type1_13_price1">Casual use and membership available.</string>
    <string name="type1_13_price2">Not free</string>
    <string name="type1_13_desc"> 400m all-weather track with 8 lanes </string>
    <string name="type1_13_times">Open Mon-Fri 6:30am-10:30pm\n Sat 9am-6pm\n Sun 9am-10pm.</string>
    <string name="type1_13_picURL">https://imgur.com/sjar9RT</string>
    <string name="type1_14_name">Sutcliffe Park</string>
    <string name="type1_14_address"> SE9 5LW</string>
    <string name="type1_14_mapsURL">https://www.google.com/maps/search/?api=1&amp;query=Sutcliffe+Park+Sports+Centre</string>
    <string name="type1_14_price1">Adult £3.70, Junior £2.10.\n Membership options available for reduced charges.\n 6 month season tickets available.</string>
    <string name="type1_14_price2">Not free</string>
    <string name="type1_14_desc">400m synthetic, 6-lane track. </string>
    <string name="type1_14_times">Open Tue 4pm-9pm\n Thu 4pm-9pm\n Sat 9:30am-1:30pm\n Sun 10am-1pm.</string>
    <string name="type1_14_picURL">https://imgur.com/oOlF3EK</string>
    <string name="type1_15_name">Ladywell Arena</string>
    <string name="type1_15_address">SE6 4QX</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Description</string>
</resources>