<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ldn_background"
    android:orientation="vertical"
    tools:context="main.MainMenu">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="4.5"
        android:gravity="center">



    </View>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_weight="1.25"
        android:gravity="center">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background1"

            android:gravity="center"
            android:text="@string/parkrun_text1"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.25"
        android:gravity="center">

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@drawable/button_background1"
            android:gravity="center"
            android:text="@string/parkrun_text2"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.25"
        android:gravity="center">

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background1"

            android:gravity="center"
            android:text="@string/parkrun_text3"
            android:textColor="@color/white"

            android:textSize="20sp" />
    </LinearLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5">

    </View>


</LinearLayout>